# tombola

./: .gitignore  Cargo.toml  README.md  README_GAME_DUMPS.md
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/prompts/: rust.prompt.md
conf/: client.conf  server.conf
docs/: ARCHITECTURE.md  CLIENTS.md  DATA.md  FLOWS.md  GAME_DUMPS.md  TODO.md  TOMBOLA_API.md
src/: api_handlers.rs  board.rs  board_client.rs  card.rs  card_client.rs  client.rs  config.rs  defs.rs  extraction.rs  game.rs  lib.rs  logging.rs  main.rs  pouch.rs  prize.rs  score.rs  server.rs  server_old.rs  terminal.rs  tombola_client.rs  tombola_server.rs
src/clients/: api_client.rs  card_client.rs  card_management.rs  common.rs  game_utils.rs  lib.rs  mod.rs  registration.rs  terminal.rs  tombola_client.rs
tests/: test_card_client_optimized.ps1
