[package]
name = "tombola"
version = "0.1.0"
edition = "2024"
description = "A Rust-based tombola/bingo game"
authors = ["Emiliano De Simoni <emiliano.desimoni@outlook.com>"]
license = "GPLv3.0"
repository = "https://github.com/badbat75/tombola"

[dependencies]
rand = "0"
crossterm = "*"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[[bin]]
name = "tombola"
path = "src/tombola_server.rs"

[[bin]]
name = "tombola_client"
path = "src/terminal_client.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "cartella"
path = "src/card.rs"