[package]
name = "tombola"
version = "0.10.0"
edition = "2024"
description = "A Rust-based tombola/bingo game"
authors = ["Emiliano De Simoni <emiliano.desimoni@outlook.com>"]
license = "GPLv3.0"
repository = "https://github.com/badbat75/tombola"

[dependencies]
rand = "0"
crossterm = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0"
tower = "0"
tower-http = { version = "0", features = ["cors"] }
chrono = "0"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[[bin]]
name = "tombola-server"
path = "src/tombola_server.rs"

[[bin]]
name = "tombola-client"
path = "src/tombola_client.rs"

[[bin]]
name = "tombola-player"
path = "src/card_client.rs"
